Show right-aligned Cancel button instead of left-aligned Back button in the Create Issue dialog when it's opened from the Content Grid's toolbar (#5011)

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-dialog.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/content/publish/issue-dialog.less
@@ -59,17 +59,25 @@
     }
   }
 
+  &:not(.cancel-enabled) .button-container {
+    width: 100%;
+
+    .create-issue-action {
+      float: right;
+    }
+
+    .cancel-button-bottom {
+      margin-left: 0;
+    }
+
+  }
+
   .button-container {
 
-    width: 100%;
     box-sizing: border-box;
 
     .back-action {
       float: left;
-    }
-
-    .create-issue-action {
-      float: right;
     }
   }
 
